--- a/src/modules/HeroBanner/style.css
+++ b/src/modules/HeroBanner/style.css
@@ -13,13 +13,25 @@
     background: url('/home/hero_banner_bgsection.png');
     background-size: cover;
 }
-.hero_banner .content .head {
-    font-size: 9rem;
+.hero_banner .content .head{
 
     grid-column-start: 1;
     grid-column-end: 9;
 }
+.hero_banner .content .head span {
+    font-size: var(--font-s-h0);
+ 
+    letter-spacing: var(--font-ls-h0);
+   
+    line-height: var(--font-lh-h0);
+    text-transform: uppercase;
+
+    font-family: 'Courier New', Courier, monospace;
+}
 .hero_banner .content .des {
     grid-column-start: 1;
     grid-column-end: 5;
+}
+.hero_banner .content .des p{
+    font-size: var(--font-s-h4);
 }
