--- a/src/modules/HeroBanner/style.css
+++ b/src/modules/HeroBanner/style.css
@@ -1,37 +1,57 @@
 .hero_banner {
-    height:150vh;
+    height: fit-content;
     width: 100%;
-
+    padding-bottom:60vh;
     position:relative;
 }
-.hero_banner .content {
+.hero_banner .content_hero_banner {
     position: relative;
     width: 100%;
     height: fit-content;
+    padding-top:60vh;
+   
 }
 .hero_banner {
-    background: url('/home/hero_banner_bgsection.png');
+    will-change:tranform;
     background-size: cover;
 }
-.hero_banner .content .head{
+.hero_banner .content_hero_banner .head{
 
     grid-column-start: 1;
     grid-column-end: 9;
 }
-.hero_banner .content .head span {
-    font-size: var(--font-s-h0);
+.hero_banner .content_hero_banner .head span {
+    font-size: 300px;
  
-    letter-spacing: var(--font-ls-h0);
+    letter-spacing: 100%;
    
-    line-height: var(--font-lh-h0);
+    line-height:  100%;
     text-transform: uppercase;
 
-    font-family: 'Courier New', Courier, monospace;
+
 }
-.hero_banner .content .des {
+.hero_banner .content_hero_banner .des {
     grid-column-start: 1;
     grid-column-end: 5;
+    padding: 100px 0;
 }
-.hero_banner .content .des p{
+.hero_banner .content_hero_banner .des p{
     font-size: var(--font-s-h4);
+}
+
+.content_hero_banner .more{
+    grid-column-start: 1;
+    grid-column-end: 12;
+}
+.content_hero_banner .more .more_info .menu {
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row:1;
+    background:blue;
+}
+ .content_hero_banner .more .more_info {
+    grid-row:1;
+    grid-column-start: 10;
+    grid-column-end: 12;
+    background:blue;
 }
