--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: JosefinSans;
-    src: url(/public/JosefinSans/JosefinSans-Light.ttf);
+    src: url('/public/JosefinSans/JosefinSans-Light.ttf');
     weight: 400
   }
 div,p,a,span {
-    font-family: JosefinSans;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
 
-    --grid_margin_des: 50px;
+    --grid_margin_des: 8vw;
     --grid_col_count: repeat(12, 1fr);
     --grid_gap: 10px;
 
-    --black: black;
-    --white: rgb(255, 255, 255);
-    --gray: gray;
+    --black: #0d0e13;
+    --white: #e4e0db;
+    --gray: hsla(33,14%,88%,.8);
 
     --fsdf : 1rem;
     --fslarge: 10rem;
@@ -76,6 +76,12 @@ div,p,a,span {
     --font-s-label: 3.7333333333vw;
     --font-lh-label: 3.7333333333vw;
     --font-ls-label: 0vw
+
+
+
+    /* let go */
+    /* index */
+    --navbar_height: 10vh;
 }
 
 @media(min-width: 601px) {
@@ -121,6 +127,7 @@ div,p,a,span {
 
 html {
     font-size: 16px;
+    overflow-x: hidden;
 }
 body {
     margin:0;
@@ -151,6 +158,9 @@ button:hover {
 ul,ol {
     list-style-type: none;
 }
+.light_background {
+    background-color: var(--white);
+}
 .light_background h1,
 .light_background h2,
 .light_background h3,
@@ -159,6 +169,9 @@ ul,ol {
 .light_background a,
 .light_background span {
     color: var(--black);
+}
+.dark_background {
+    background-color: var(--black);
 }
 
 .dark_background h1,
