--- a/src/modules/HeroBanner/style.css
+++ b/src/modules/HeroBanner/style.css
@@ -1,7 +1,7 @@
 .hero_banner {
     height: fit-content;
     width: 100%;
-    padding-bottom:60vh;
+    padding-bottom:20vh;
     position:relative;
 }
 .hero_banner .content_hero_banner {
@@ -18,14 +18,14 @@
 .hero_banner .content_hero_banner .head{
 
     grid-column-start: 1;
-    grid-column-end: 9;
+    grid-column-end: 13;
 }
 .hero_banner .content_hero_banner .head span {
-    font-size: 300px;
+    font-size: 12vw;
  
-    letter-spacing: 100%;
-   
-    line-height:  100%;
+    letter-spacing: -2px;
+    font-weight: 600;
+    line-height:  90%;
     text-transform: uppercase;
 
 
@@ -35,23 +35,29 @@
     grid-column-end: 5;
     padding: 100px 0;
 }
-.hero_banner .content_hero_banner .des p{
+
+.content_hero_banner   .icon {
+    grid-column-start: 1;
+    grid-column-end: 4;
+
+  
+}
+.content_hero_banner   .icon {
+  
+}
+.content_hero_banner   .menu {
+    grid-column-start: 8;
+    grid-column-end: 10;
+
+  
+}
+.content_hero_banner a,
+.content_hero_banner p {
     font-size: var(--font-s-h4);
 }
+ .content_hero_banner .more_info {
 
-.content_hero_banner .more{
-    grid-column-start: 1;
-    grid-column-end: 12;
-}
-.content_hero_banner .more .more_info .menu {
-    grid-column-start: 5;
-    grid-column-end: 7;
-    grid-row:1;
-    background:blue;
-}
- .content_hero_banner .more .more_info {
-    grid-row:1;
     grid-column-start: 10;
     grid-column-end: 12;
-    background:blue;
+  
 }
