--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,18 +54,19 @@ main {
     height:auto;
 }
 .scroll {
-    position:fixed;
+   /*  position:fixed;
     top:0;
-    left:0;
+    left:0; */
   
 }
 .page {
     position: absolute;
     top:0;
     left:0;
-    marign: auto;
+    margin: auto;
     width:100%;
-    height:100vh; 
+    /* height:100vh;  */
+    height: fit-content;
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     will-change:tranform,opacity;
 
@@ -90,7 +91,3 @@ main {
 
 
 
-/* main.css */
-a {
-    font-size:2.2rem;
-}
