--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,6 +71,32 @@ main {
     will-change:tranform,opacity;
 
 }
+.List {
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    width: 400px;
+    background: cyan;
+    overflow: scroll;
+    border: 2px solid black;
+    box-sizing: border-box;
+  }
+  
+  .List-item {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+    margin: 0;
+    padding: 5px;
+    overflow: hidden;
+  }
+  
+#hero_banner_section,
+#section1,
+#section2 {
+    will-change:transform;
+}
 .section1 {
     position:relative;
     width:100vw;
