--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,18 @@
+#lenis_space {
+   
+    width:100%;
+    z-index: 99999;
+    position: relative;
+}
 #page1 {
 
     background:url('/home/ser1.png');
 
     background-repeat: no-repeat;
     background-size: cover;
-    display:flex;
 
+    transform: rotate(5) scale(1.3);
+    z-index: 0;
 }
 .page h1 {
     z-index:9999;
@@ -14,16 +21,19 @@
     color:white;
 }
 #page2 {
-    display:flex;
+    
     background:url('/home/ser4.png');
 
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 0;
 }
 #id_2 {
   
 }
 main {
+    position: relative;
+    width: 100%;
     height:100vh;
     overflow:hidden;
 }
@@ -66,9 +76,11 @@ main {
     margin: auto;
     width:100%;
     height:100vh; 
+    overflow: hidden;
   /*   height: fit-content; */
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     will-change:tranform,opacity;
+
 
 }
 .List {
