--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,7 +11,6 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    transform: rotate(5) scale(1.3);
     z-index: 0;
 }
 .page h1 {
@@ -58,7 +57,7 @@ main {
     padding: 1rem 2rem;
     border: 1px solid green;
 }
-.ProvidersProviders {
+.View_Switch_Compo {
     position:relative;
     width:100%;
     height:auto;
@@ -80,7 +79,7 @@ main {
   /*   height: fit-content; */
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     will-change:tranform,opacity;
-
+    
 
 }
 .List {
