--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,16 +10,24 @@
 
     z-index: 0;
 }
+.menu_view  {
+    
+}
 .page h1 {
     z-index:9999;
     margin: auto;
     font-size:5rem;
     color:white;
 }
-#page2,#page3,#page4 {
+#menu {
+    opacity:0;
+    will-change:tranform,opacity;
+}
+#page2,#page3,#page4,#menu {
   
     z-index: 0;
 }
+
 #id_2 {
   
 }
@@ -64,7 +72,7 @@ main {
     width:100%;
     height:100vh; 
 }
-.page .content {
+.page > .fix > .content {
     position: absolute;
     top:0;
     left:0;
@@ -74,7 +82,7 @@ main {
     overflow: hidden;
     transform-origin: top top ;
     will-change:tranform;
-    
+        
 
     
 }
