--- a/src/components/ProjectsSection/style.css
+++ b/src/components/ProjectsSection/style.css
@@ -2,7 +2,7 @@
     --width_item : 25vw;
     --gap_item: 50px;
 }
-.work_section {
+.projects_section {
     position:relative;
     width:100%;
     height:100vh;
