--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,13 @@ section{
 
     z-index: 0;
 }
+/* #home,#page1,#page2,#page3,#page4{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%),
+} */
+#homescroll,#page1scroll,#page2scroll,#page3scroll,#page4scroll {
+    transform: translate(-300px,600px) scale(1.3) rotate(7deg);
+}
+
 .menu_view  {
     
 }
@@ -84,7 +91,7 @@ main {
     width:100%;
     height:100vh; 
     overflow: hidden;
-    transform-origin: top top ;
+    transform-origin: "top top";
     will-change:tranform;
         
 
@@ -99,12 +106,13 @@ main {
     height:100vh; 
     overflow: hidden;
   /*   height: fit-content; */
-    clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%);
+  /*   clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%); */
   
     will-change:tranform;
     
 
 }
+
 .List {
     display: flex;
     flex-direction: column;
