--- a/src/components/FooterSection/style.css
+++ b/src/components/FooterSection/style.css
@@ -3,9 +3,9 @@
     width: 100%;
     height: 100vh;
 
-   
-    overflow: hidden;
+    z-index:-1;
 }
+
 .content_footer_section {
     position: absolute;
     width: 100%;
@@ -13,10 +13,22 @@
     top:0;
     left:0;
 
+
+    
+}
+.wrapper_content_footer_section {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    
+    will-change:transform;
 }
 .first_footer {
     width: 100%;
