--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,8 @@ section{
 } */
 #homescroll,#page1scroll,#page2scroll,#page3scroll,#page4scroll {
     transform: translate(-300px,600px) scale(1.3) rotate(7deg);
+    will-change:tranform,opacity;
+    opacity: 0;
 }
 
 .menu_view  {
@@ -92,7 +94,7 @@ main {
     height:100vh; 
     overflow: hidden;
     transform-origin: "top top";
-    will-change:tranform;
+
         
 
     
