--- a/src/components/FooterSection/style.css
+++ b/src/components/FooterSection/style.css
@@ -39,12 +39,13 @@
     width: 50%;
 }
 .first_footer .text h3 {
-    font-size: 7vw;
+    font-size: 6vw;
     line-height:100%;
 }
 .first_footer .text  p{
-    width: 75%;
-    font-size: 2rem;
+    width: 60%;
+    font-size: 1rem;
+    padding: 1rem 0 0 0 ;
 }
 .first_footer  .image {
     width: 50%;
