--- a/src/components/AboutusDetail/style.css
+++ b/src/components/AboutusDetail/style.css
@@ -48,6 +48,7 @@
     bottom: 10px;
     transform: translateX(-100%);
     font-weight: bold;
+    font-family : BeautiqueDisplay;
     color: var(--gray);
     padding: 0 20px 0 0;
 }
