--- a/src/modules/HeroBanner/style.css
+++ b/src/modules/HeroBanner/style.css
@@ -11,6 +11,14 @@
     padding-top:60vh;
    
 }
+#hero_banner_section .backgroundBanner {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+}
 .hero_banner {
     will-change:tranform;
     background-size: cover;
