--- a/src/modules/HeroBanner/style.css
+++ b/src/modules/HeroBanner/style.css
@@ -1,7 +1,7 @@
 .hero_banner {
     height: fit-content;
     width: 100%;
-    padding-bottom:20vh;
+   
     position:relative;
 }
 .hero_banner .content_hero_banner {
@@ -9,7 +9,10 @@
     width: 100%;
     height: fit-content;
     padding-top:60vh;
-   
+    padding-bottom:20vh;
+}
+#hero_banner_section {
+    overflow: hidden;
 }
 #hero_banner_section .backgroundBanner {
     position:absolute;
