--- a/src/components/AboutusDetail/style.css
+++ b/src/components/AboutusDetail/style.css
@@ -9,16 +9,22 @@
 }
 .aboutus_detail_section .detail .tag  {
     display:flex;
+    align-items: center;
+  
 }
 .aboutus_detail_section .detail .tag span {
     width:20px;
     height: 20px;
-    margin-right:1rem;
+    margin-right:20px;
 }
-.aboutus_detail_section .detail h3  {
+
+.aboutus_detail_section .detail .tag p {
+    font-size: 1vw;
+}
+.aboutus_detail_section .detail > p  {
 
     
-    margin: 4.8611111111vw 0 11.4583333333vw;
+    margin: 2vw 0 5vw 0;
 
 
     font-size: var(--font-s-h3);
@@ -45,12 +51,13 @@
 .advan_1>div span,.advan_2>div span,.advan_3>div span,.advan_4>div span {
     position: absolute;
     left: 0;
-    bottom: 10px;
+    bottom: 0;
     transform: translateX(-100%);
+    font-size: 3vw;
     font-weight: bold;
-    font-family : BeautiqueDisplay;
+    font-family: BeautiqueDisplay;
     color: var(--gray);
-    padding: 0 20px 0 0;
+    padding: 0 2vw 0 0;
 }
 .advan_1 {
     grid-column-start: 3;
@@ -60,7 +67,7 @@
     grid-column-start: 8;
     grid-column-end: 11;
 
-    margin-top:10vw;
+    margin-top:15vw;
 }
 .aboutus_detail_section .head_anim {
     position: absolute;
@@ -81,5 +88,5 @@
     grid-column-start: 7;
     grid-column-end: 10;
 
-    margin-top:10vw;
+    margin-top:15vw;
 }
