--- a/src/components/NavbarSection/style.css
+++ b/src/components/NavbarSection/style.css
@@ -47,6 +47,6 @@
     margin-left:2rem;
 }
 .navbar_section .menu_list ul li a {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: var(--white);
 }
