--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -3,6 +3,9 @@
     src: url('/fonts/BeautiqueDisplay/BeautiqueDisplay-Bold.otf');
     weight: 400
   }
+  a{
+    position: relative;
+  }
 div,p,a,span {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -11,6 +14,9 @@ div,p,a,span {
     --grid_margin_des: 8vw;
     --grid_col_count: repeat(12, 1fr);
     --grid_gap: 10px;
+    --col_width : calc(calc(calc(100vw - calc(var(--grid_margin_des) * 2)) - calc(var(--grid_gap) * 11)) / 12);
+
+
 
     --black: #0d0e13;
     --white: #e4e0db;
@@ -145,7 +151,7 @@ h3,
 h4,
 h5,
 p,
-ul,ol {
+ul.format,ol.format {
     margin: 0;
     padding: 0;
 }
@@ -158,7 +164,7 @@ button:hover {
     user-select: none;
 }
 
-ul,ol {
+ul.format,ol.format {
     list-style-type: none;
 }
 .light_background {
