--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -93,7 +93,7 @@ main {
     width:100%;
     height:100vh; 
     overflow: hidden;
-    transform-origin: "top top";
+   /*  transform-origin: top top; */
 
         
 
