--- a/src/components/NavbarOpenFull/style.css
+++ b/src/components/NavbarOpenFull/style.css
@@ -1,11 +1,20 @@
+.wrapper__navbar_open_full_section {
+    position:fixed;
+    width:100vw;
+    height:100vh;
+    top:0;
+    left:0;
+}
+
 .navbar_open_full_section {
     position:relative;
     width:100%;
     height:100vh;
-    
+    top:0;
+    left:0;
     display: flex;
     align-items: center;
-    
+
 }
 .navbar_open_full_section > div {
     height:72vh;
@@ -23,5 +32,5 @@
     align-items: center;
 }
 .navbar_open_full_section .menu_item_list a {
-    font-size:5rem;
+    font-size: 3.6rem;
 }
