--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -133,3 +133,22 @@ a {
   bottom:0;
   right:0;
 }
+
+.testing {
+  width:200px;
+  height:200px;
+  border: 1px solid red;
+}
+
+.doeo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #1d3737;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+}
