--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,117 +1,134 @@
 #lenis_space {
-   
-    width:100%;
+
+    width: 100%;
     z-index: 99999;
     position: relative;
 }
-section{
-    width:100%;
-    height:fit-content;
+
+section {
+    width: 100%;
+    height: fit-content;
 }
+
 #page1 {
 
-  
+
 
     z-index: 0;
 }
+
 /* #home,#page1,#page2,#page3,#page4{
     clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%),
 } */
-#homescroll,#page1scroll,#page2scroll,#page3scroll,#page4scroll {
+#homescroll,
+#page1scroll,
+#page2scroll,
+#page3scroll,
+#page4scroll {
     transform: translateY(600px) scale(1.3) rotate(7deg);
-    will-change:tranform,opacity;
+    will-change: tranform, opacity;
     opacity: 0;
 }
 
-.menu_view  {
-    
-}
 .page h1 {
-    z-index:9999;
+    z-index: 9999;
     margin: auto;
-    font-size:5rem;
-    color:white;
+    font-size: 5rem;
+    color: white;
 }
+
 #menu {
-    opacity:0;
-    will-change:tranform,opacity;
+    opacity: 0;
+    will-change: tranform, opacity;
 }
-#page2,#page3,#page4,#menu {
-  
+
+#page2,
+#page3,
+#page4,
+#menu {
+
     z-index: 0;
 }
 
-#id_2 {
-  
-}
+#id_2 {}
+
 main {
     position: relative;
     width: 100%;
-    height:100vh;
-    overflow:hidden;
+    height: 100vh;
+    overflow: hidden;
 }
-.navbar{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:50px;
-    
-    z-index:1111;
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+
+    z-index: 1111;
 }
+
 .navbar ul {
-    display:flex;
+    display: flex;
     flex-direction: row;
-}.navbar ul li {
+}
+
+.navbar ul li {
     margin: 0 50px;
 }
+
 .navbar a {
     font-size: 2rem;
-    display:block;
+    display: block;
     padding: 1rem 2rem;
     border: 1px solid green;
 }
+
 .View_Switch_Compo {
-    position:relative;
-    width:100%;
-    height:auto;
+    position: relative;
+    width: 100%;
+    height: auto;
 }
+
 .fix {
-    position:fixed;
-    top:0;
-    left:0;
+    position: fixed;
+    top: 0;
+    left: 0;
     bottom: 0;
-    right   :0;
-    width:100%;
-    height:100vh; 
+    right: 0;
+    width: 100%;
+    height: 100vh;
 }
-.page > .fix > .content {
+
+.page>.fix>.content {
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     margin: auto;
-    width:100%;
-    height:100vh; 
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
-   /*  transform-origin: top top; */
+    /*  transform-origin: top top; */
 
-        
 
-    
+
+
 }
+
 .page {
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     margin: auto;
-    width:100%;
-    height:100vh; 
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
-  /*   height: fit-content; */
-  /*   clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%); */
-  
-    will-change:tranform;
-    
+    /*   height: fit-content; */
+    /*   clip-path: polygon(0% 0%, 100% 0%, 100% 123%, 0% 100%); */
+
+    will-change: tranform;
+
 
 }
 
@@ -124,9 +141,9 @@ main {
     overflow: scroll;
     border: 2px solid black;
     box-sizing: border-box;
-  }
-  
-  .List-item {
+}
+
+.List-item {
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -134,36 +151,38 @@ main {
     margin: 0;
     padding: 5px;
     overflow: hidden;
-  }
-  
+}
+
 #hero_banner_section,
 #section1,
 #section2 {
-    will-change:transform;
+    will-change: transform;
 }
+
 .section1 {
-    position:relative;
-    width:100vw;
-    height:100vh;
-    background:blue;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background: blue;
 }
+
 .section2 {
-    position:relative;
-    width:100vw;
-    height:100vh;
-    background:green;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background: green;
 }
-.page * {
-  
-}
+
+.page * {}
+
 .overplay {
-    background:blue;
-    width:100%;
-    height:100vh;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:2;
+    background: blue;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
 
     /* clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); */
 }
@@ -174,14 +193,78 @@ main {
 
 /* another eff */
 .underline-effect-styles {
-  position: absolute;
-  bottom:-0.2px;
-  left:0;
-  width: 0;
-  height: 1px;
-  background-color:var(--white);
-  will-change: transform;
+    position: absolute;
+    bottom: -0.2px;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: var(--white);
+    will-change: transform;
+}
+
+
+/* work detail page */
+
+#work1page,
+#work2page,
+#work3page,
+#work4page {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    will-change: tranform;
+
+}
+
+#work1page>.part1,
+#work2page>.part1,
+#work3page>.part1,
+#work4page>.part1 {
+    width: 100%;
+    height: 100vh;
+    transform: scale(1.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#work1page>.part1 {
+    background: url(/work/TRAO.webp);
+    background-size: cover;
+
+}
+
+#work2page>.part1 {
+    background: url(/work/NET.webp);
+    background-size: cover;
+
+}
+
+
+#work3page>.part1 {
+    background: url(/work/SIREN.webp);
+    background-size: cover;
+
+}
+
+
+#work4page>.part1 {
+    background: url(/work/MOIDIEN.webp);
+    background-size: cover;
+
 }
 
 
 
+#work1page>.part2,
+#work2page>.part2,
+#work3page>.part2,
+#work4page>.part2 {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: blue;
+}
