--- a/src/components/FooterSection/style.css
+++ b/src/components/FooterSection/style.css
@@ -1,3 +1,5 @@
+
+
 .footer_section {
     position:relative;
     width: 100%;
@@ -17,7 +19,7 @@
     
 }
 .wrapper_content_footer_section {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top:0;
