--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,8 +28,11 @@ section {
     transform: translateY(600px) scale(1.3) rotate(7deg);
     will-change: tranform, opacity;
     opacity: 0;
+  
 }
-
+#aboutpage,#contactpage,#homepage {
+    overflow:hidden;
+}
 .page h1 {
     z-index: 9999;
     margin: auto;
