--- a/src/components/new/ButtonMenu/style.css
+++ b/src/components/new/ButtonMenu/style.css
@@ -1,16 +1,17 @@
 #button_menu {
     color: #0d0e13;
     color: var(--color-dark-grey);
-    display: flex;
+    display: none;
    
     padding: 8vw;
     position: fixed;
     right: 0;
     top: 0;
     transition: color .5s;
-    z-index: 14;
-
+    z-index: 999;
+    align-items: center;
     background-color:unset !important;
+   
     border: none;
 }
 #button_menu .lable {
@@ -31,6 +32,7 @@
     margin-left: 3.2vw;
     position: relative;
     width: 4.8vw;
+    transform:rotate(45deg);
 }
 @media (min-width: 601px) {
    #button_menu {
