--- a/src/components/new/modules/WorkPage/style.css
+++ b/src/components/new/modules/WorkPage/style.css
@@ -19,7 +19,7 @@
 
     height:100vh;
 }
-#work_page  .subtitle {
+#work_page  .subtitle .iii{
     font-family: "Lausanne-300";
     font-family: var(--font-f-lausanne-300);
     font-size: 3.7333333333vw;
@@ -33,10 +33,10 @@
 #work_page .heading {
     left: 16.1805555556vw;
     position: absolute;
-    z-index: 5;
+    z-index: 999;
 
     /* for slider */
-    width:100%;
+    width:20%;
 }
 #work_page .title span{
     font-weight:300;
@@ -76,7 +76,7 @@
     pointer-events: none;
     position: relative;
     width: 22.0833333333vw;
-    z-index: 5;
+
 }
 #work_page .thumbnail,#work_page  .thumbnail-image {
     bottom: 0;
@@ -97,11 +97,15 @@
     right: 0;
     top: 0;
     width: 100%;
+    z-index:1;
 }
 #work_page .project-image {
     height: 124.5833333333vw;
-    opacity: .8;
+
     transform: scale(1.1);
+    user-select: none;
+    pointer-events: none;
+
 }
 #work_page .project,#work_page  .project-wrap {
     bottom: 0;
@@ -124,20 +128,74 @@
 
 /* config for slider effect */
 #work_page  .title {
+    position:relative;
     width:100%;
-    height: calc(var(--font-s-h2) * 4 );
+    height: calc(var(--font-s-h2) * 3.5);/*  // 3 dòng */
 }
 #work_page  .title > div{
     display: flex;
     flex-direction: column;
+    width:100%;
+    height:100%;
+    position:absolute;
+ 
+}
 
+#work_page .subtitle {
+    position:relative;
+    width:100%;
+    overflow:hidden;
+    height: calc(var(--font-s-p) * 4.2);/*  // max 3 min 1 =>  x 3.2*/
 }
 #work_page  .title > div,
 #work_page  .subtitle > div {
-    position:absolute;
-    opacity:0;
+
+  
+}
+#work_page  .subtitle > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 #work_page  .title > div.active,
 #work_page  .subtitle > div.active {
-    opacity:1;
+   
+}
+/* config từng item cụ thể , not clean */
+#work_page .title .ii {
+    width:100%;
+    position:relative;
+    overflow:hidden;
+    height:33%; /* lấy 3 row */
+}
+#work_page .title .iii {
+    position:absolute;
+    width:100%;
+    height:100%;
+    opacity:0;
+  
+    
+    will-change:tranform,opacity;
+}
+#work_page .subtitle .ii {
+    width:100%;
+    position:relative;
+    display:block;
+    overflow:hidden;
+    height: calc(var(--font-s-p) * 1.5);
+}
+#work_page .subtitle .iii {
+    position:absolute;
+    width:100%;
+    height: calc(var(--font-s-p) * 1.5);
+    opacity:0;
+
+    will-change:tranform,opacity;
+  
+}
+#work_page .projects button:first-child {
+    z-index: 5;
+}
+#work_page .thumbnails .thumbnail:first-child {
+    z-index: 7;
 }
