--- a/src/components/new/HeroSection/style.css
+++ b/src/components/new/HeroSection/style.css
@@ -1,6 +1,7 @@
 .hero_section {
     
-    height: 136.6666666667vw;
+    /* height: 136.6666666667vw; */
+    height:150vw;
     overflow: hidden;
 }
 .hero_section > .background {
