--- a/src/components/new/ServicesSection/style.css
+++ b/src/components/new/ServicesSection/style.css
@@ -12,11 +12,12 @@
 
 
 #servcies_section .lable {
+    font-weight:300;
     color: #0d0e13;
     color: var(--color-dark-grey);
     display: inline-flex;
-    font-family: Lausanne-400;
-    font-family: var(--font-f-lausanne-400);
+    font-family: Lausanne-300;
+    font-family: var(--font-f-lausanne-300);
     font-size: 3.7333333333vw;
     font-size: var(--font-s-label);
     height: 7.7333333333vw;
@@ -104,7 +105,7 @@
 
     #servcies_section .services {
         display: grid;
-        margin: -19.8vw 0 0;
+        margin: -11.8vw 0 0;
 
         grid-column-gap: 2.2222222222vw;
         grid-template-columns: repeat(12, 1fr);
